--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,3 +16,6 @@
 @import "./components/footer/footer-contacts";
 @import "./components/footer/join-us";
 @import "./components/footer/subscribe";
+@import "./components/portfolio/portfolio";
+@import "./components/portfolio/portfolio-nav";
+@import "./components/portfolio/examples";
