--- a/css/main.css
+++ b/css/main.css
@@ -235,15 +235,509 @@ input {
   margin-left: 10px;
 }
 
-.portfolio {
-  margin-bottom: 94px;
+.hero {
+  text-align: center;
+  padding-bottom: 94px;
+  padding-top: 200px;
+  background-image: url(../img/hero/img-overlay.svg), url(../img/hero/hero-img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.portfolio-title {
+.hero-title {
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36em;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+.hero-btn {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  padding: 10px 32px;
+  margin-bottom: 200px;
+  color: #ffffff;
+  background-color: #2196f3;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 3;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.order {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-animation: animate 100ms;
+          animation: animate 100ms;
+  width: 528px;
+  height: 581px;
+  text-align: left;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.order::before {
+  content: "";
+}
+
+.order-form-title {
+  margin-top: 40px;
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.form-field {
+  position: relative;
+  width: 448px;
+  margin: 0 auto 10px;
+}
+
+.form-label {
+  font-size: 12px;
+  line-height: 1.2;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 35px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.form-input {
+  outline: none;
+}
+
+.form-input.name:hover, .form-input.name:focus {
+  border-color: #2196f3;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+
+.form-input.name:hover + .modal-name-img,
+.form-input.name:focus + .modal-name-img {
+  fill: #2196f3;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+
+.form-input.email:hover, .form-input.email:focus {
+  border-color: #2196f3;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+
+.form-input.email:hover + .modal-email-img,
+.form-input.email:focus + .modal-email-img {
+  fill: #2196f3;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+
+.form-input.tel:hover, .form-input.tel:focus {
+  border-color: #2196f3;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+
+.form-input.tel:hover + .modal-tel-img,
+.form-input.tel:focus + .modal-tel-img {
+  fill: #2196f3;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+
+.modal-name-img {
+  position: absolute;
+  top: 32px;
+  left: 15px;
+  width: 12px;
+  height: 12px;
+}
+
+.modal-tel-img {
+  position: absolute;
+  top: 32px;
+  left: 15px;
+  width: 13px;
+  height: 13px;
+}
+
+.modal-email-img {
+  position: absolute;
+  top: 32px;
+  left: 15px;
+  width: 15px;
+  height: 12px;
+}
+
+.send-order {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.send-order-btn {
+  padding: 10px 56px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background: #2196f3;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form-field {
+  position: relative;
+}
+
+.checkbox-input {
+  position: absolute;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.checkbox-input:checked + .checkbox-icon {
+  background-color: var(--accent-color);
+  background-image: url(../img/modal/checkbox.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-origin: border-box;
+  border-color: #2196f3;
+}
+
+.checkbox-label {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.checkbox-icon {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 9px;
+  border: 1px solid #000;
+  border-radius: 4px;
+}
+
+.license-accent {
+  color: #2196f3;
+  text-decoration: underline;
+}
+
+.text-area {
+  width: 448px;
+  height: 120px;
+  padding: 12px 16px;
+  resize: none;
+}
+
+@-webkit-keyframes animate {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes animate {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.close-btn:hover .close-img {
+  fill: #2196f3;
+}
+
+.close-img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 11px;
+  height: 11px;
+  fill: #212121;
+}
+
+.close-order {
+  width: 11px;
+  height: 11px;
+  fill: #000000;
+}
+
+.feature {
+  /* outline: 1px solid yellow; */
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.feature-main-title {
   display: none;
 }
 
-.portfolio-btn-list {
+.feature-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.feature-list .feature-item::before {
+  content: "";
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+}
+
+.feature-list .attention::before {
+  content: "";
+  background-color: #f5f4fa;
+  background-image: url(../img/feature/feature-1.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.feature-list .punctuality::before {
+  content: "";
+  background-color: #f5f4fa;
+  background-image: url(../img/feature/feature-2.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.feature-list .planning::before {
+  content: "";
+  background-color: #f5f4fa;
+  background-image: url(../img/feature/feature-3.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.feature-list .technologies::before {
+  content: "";
+  background-color: #f5f4fa;
+  background-image: url(../img/feature/feature-4.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.feature-list .feature-item + .feature-item {
+  margin-left: 30px;
+}
+
+.feature-title {
+  font-weight: 700;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 1.14em;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.feature-text {
+  font-size: 14px;
+  line-height: 1.71em;
+  letter-spacing: 0.03em;
+}
+
+.what-we-do {
+  padding-bottom: 94px;
+  /* outline: 1px solid green; */
+}
+
+.what-we-do-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
+}
+
+.what-we-do-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.what-we-do-list .what-we-do-item + .what-we-do-item {
+  margin-left: 30px;
+}
+
+.what-we-do-item {
+  position: relative;
+}
+
+.what-we-do-item-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.2em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.our-team {
+  padding-bottom: 94px;
+  padding-top: 94px;
+  text-align: center;
+  background-color: subBgColor;
+  /* outline: 1px solid blue; */
+}
+
+.our-team-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
+}
+
+.our-team-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.our-team-list .our-team-item + .our-team-item {
+  margin-left: 30px;
+}
+
+.our-team-list .our-team-item {
+  width: 270px;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.our-team-list .our-team-item-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18em;
+  letter-spacing: 0.03em;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-bottom: 10px;
+  margin-right: auto;
+}
+
+.our-team-list .our-team-item-text {
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  margin-bottom: 16px;
+}
+
+.our-team-social-list {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  border-radius: 50%;
+  margin-bottom: 30px;
+}
+
+.our-team-social-link {
+  width: 44px;
+  height: 44px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -253,123 +747,125 @@ input {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.social-icon {
+  fill: #afb1b8;
+}
+
+.our-team-social-item:hover {
+  background-color: #2196f3;
+  border-radius: 50%;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+
+.our-team-social-item:hover .social-icon {
+  fill: #ffffff;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+
+.customers {
   margin-top: 94px;
+  padding-bottom: 94px;
+}
+
+.customers-title {
+  text-align: center;
   margin-bottom: 50px;
 }
 
-.portfolio-btn-list .portfolio-item + .portfolio-item {
-  margin-left: 8px;
+.customers-list {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
 }
 
-.portfolio-btn-list button:hover,
-.portfolio-btn-list button:focus {
-  background-color: #2196f3;
-  color: #ffffff;
-  cursor: pointer;
-  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
-  transition: cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
+.customers-list .customers-item + .customers-item {
+  margin-left: 30px;
 }
 
-.portfolio-btn {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62em;
-  text-align: center;
-  letter-spacing: 0.03em;
-  background-color: #f5f4fa;
-  padding: 6px 22px;
-  border-radius: 4%;
-}
-
-.examples {
-  display: none;
-}
-
-.examples-list {
+.customers-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  width: 170px;
+  height: 90px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
 }
 
-.examples-list .examples-item:hover {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.customers-item:hover {
+  border-color: #2196f3;
   -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
   transition: cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
 }
 
-.examples-list .examples-item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px;
-}
-
-.examples-list .examples-title {
-  font-size: 18px;
-  line-height: 2em;
-  letter-spacing: 0.06em;
-  margin-left: 24px;
-}
-
-.examples-list .examples-item {
-  border: 1px solid #eeeeee;
-  width: 372px;
-}
-
-.examples-list .examples-item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-
-.examples-list .examples-item:hover .examples-text {
-  opacity: 1;
-  -webkit-transform: translatey(0);
-          transform: translatey(0);
-}
-
-.examples-subtitle {
-  font-size: 16px;
-  margin-left: 24px;
-  line-height: 1.87em;
-  letter-spacing: 0.03em;
-  margin-bottom: 20px;
-}
-
-.examples-container {
-  position: relative;
-  overflow: hidden;
-}
-
-.examples-text {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding-top: 63px;
-  padding-right: 23px;
-  padding-left: 23px;
-  font-family: Roboto;
-  font-size: 18px;
-  line-height: 1.56em;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  background-color: #2196f3;
-  opacity: 0;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+.customers-item:hover .customers-icon {
+  fill: #2196f3;
   -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
   transition: cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
+}
+
+.customers-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.customers-icon {
+  fill: #afb1b8;
+}
+
+.ya-co {
+  width: 44px;
+  height: 49px;
+}
+
+.comapny-tag-line-here {
+  width: 40px;
+  height: 52px;
+}
+
+.company {
+  width: 44px;
+  height: 49px;
+}
+
+.foster-peters {
+  width: 80px;
+  height: 42px;
+}
+
+.brand {
+  width: 60px;
+  height: 47px;
+}
+
+.company-tag-line {
+  width: 88px;
+  height: 45px;
 }
 
 .footer {
@@ -537,5 +1033,142 @@ input {
 .subscribe-btn-text {
   margin-left: 29px;
   margin-right: 10px;
+}
+
+.portfolio {
+  margin-bottom: 94px;
+}
+
+.portfolio-title {
+  display: none;
+}
+
+.portfolio-btn-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 94px;
+  margin-bottom: 50px;
+}
+
+.portfolio-btn-list .portfolio-item + .portfolio-item {
+  margin-left: 8px;
+}
+
+.portfolio-btn-list button:hover,
+.portfolio-btn-list button:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+  cursor: pointer;
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+
+.portfolio-btn {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62em;
+  text-align: center;
+  letter-spacing: 0.03em;
+  background-color: #f5f4fa;
+  padding: 6px 22px;
+  border-radius: 4%;
+}
+
+.examples {
+  display: none;
+}
+
+.examples-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.examples-list .examples-item:hover {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+
+.examples-list .examples-item:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
+}
+
+.examples-list .examples-title {
+  font-size: 18px;
+  line-height: 2em;
+  letter-spacing: 0.06em;
+  margin-left: 24px;
+}
+
+.examples-list .examples-item {
+  border: 1px solid #eeeeee;
+  width: 372px;
+}
+
+.examples-list .examples-item:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+
+.examples-list .examples-item:hover .examples-text {
+  opacity: 1;
+  -webkit-transform: translatey(0);
+          transform: translatey(0);
+}
+
+.examples-subtitle {
+  font-size: 16px;
+  margin-left: 24px;
+  line-height: 1.87em;
+  letter-spacing: 0.03em;
+  margin-bottom: 20px;
+}
+
+.examples-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.examples-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 63px;
+  padding-right: 23px;
+  padding-left: 23px;
+  font-family: Roboto;
+  font-size: 18px;
+  line-height: 1.56em;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: #2196f3;
+  opacity: 0;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
 }
 /*# sourceMappingURL=main.css.map */
