--- a/sass/components/main/hero/_hero_btn.scss
+++ b/sass/components/main/hero/_hero_btn.scss
@@ -10,4 +10,9 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
+
+  &:focus,
+  &:active {
+    outline: none;
+  }
 }
