--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -46,6 +46,32 @@ button {
   border: 0;
 }
 
+a:active,
+a:focus {
+  outline: none;
+}
+
+input,
+textarea {
+  outline: none;
+}
+input:active,
+textarea:active {
+  outline: none;
+}
+:focus {
+  outline: none;
+}
+textarea {
+  resize: none;
+}
+textarea {
+  resize: vertical;
+}
+textarea {
+  resize: horizontal;
+}
+
 ul {
   padding-inline-start: 0px;
   margin: 0px;
